src/objects/ServiceItemType__c.object
<CustomObject>
    <description>Specific Service Item Type under a Service Item Family based on certain attributes defined on other objects such as Device Type (eg. Measured Water Fixed Charge - 0.40)</description>
    <fields>
        <fullName>BillDescription__c</fullName>
        <description>Provides details about the Service Item Type for Customer&apos;s information so it will be printed on the bill.</description>
        <label>Bill Description</label>
        <length>90</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DeviceType__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup on Device Type in order to get Device size.</description>
        <label>Device Type</label>
        <referenceTo>DeviceType__c</referenceTo>
        <relationshipLabel>Service Item Types</relationshipLabel>
        <relationshipName>ServiceItemTypes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Division__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Region that the Service Item Type will be applied to (Charging Area)</description>
        <label>Division</label>
        <referenceTo>Division__c</referenceTo>
        <relationshipLabel>Service Item Types</relationshipLabel>
        <relationshipName>ServiceItemTypes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EligibleForAnAgreedRate__c</fullName>
        <description>This will identify if the Service Item Type can have an Agreed Rate</description>
        <label>Eligible for an Agreed Rate</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>EndDate__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ServiceCompany__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Wholesaler</description>
        <label>Service Company</label>
        <referenceTo>Wholesaler__c</referenceTo>
        <relationshipLabel>Service Item Types</relationshipLabel>
        <relationshipName>ServiceItemTypes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ServiceItemFamily__c</fullName>
        <description>Parent record of Service Item Type</description>
        <label>Service Item Family</label>
        <referenceTo>ServiceItemFamily__c</referenceTo>
        <relationshipLabel>Service Item Types</relationshipLabel>
        <relationshipName>ServiceItemTypes</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>StartDate__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <label>Service Item Type</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Service Item Type Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Service Item Types</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>StartDateMustbeBeforeEndDate</fullName>
        <active>true</active>
        <description>Start Date must be before End Date or End Date cannot be before Start Date.</description>
        <errorConditionFormula>StartDate__c &gt;= EndDate__c</errorConditionFormula>
        <errorMessage>Start Date must be before End Date</errorMessage>
    </validationRules>
</CustomObject>